# ACCIDENT

./: .gitignore  README.md
baselines/: README.md
baselines/heuristic/: README.md  bbox_dynamics.ipynb  bbox_dynamics.py  ensemble.ipynb  metrics.py  naive.ipynb  naive.py  optical_flow.ipynb  optical_flow.py  pyproject.toml
baselines/llm/: README.md  requirements-gemini.txt  (+1 more)
dataset/: README.md  accident_dataset.py  download_dataset.sh
docs/: GETTING_STARTED.md  REPOSITORY_LAYOUT.md
generation/: README.md
generation/carla-simulation/src/client/: Dockerfile  logging.yaml  main.py  pyproject.toml  runner.py  scenario.py
generation/carla-simulation/src/client/config/: class_mapping.json  default_annotation_template.json
generation/carla-simulation/src/client/core/: actors.py  bbox_segmentation.py  carla_annotator.py  carlautils.py  collisions.py  gui_window.py  hooks.py  ioutils.py  log.py  sensors.py  synchronous_mode.py  synthesizer.py
generation/carla-simulation/src/client/scenarios/: EXAMPLE_SCENARIO.yaml
generation/carla-simulation/src/client/scenarios/accident-benchmark/: Town03_L01-HeadOn.yaml  Town03_L02-TBone.yaml  Town04_L01-SideSwipe.yaml  Town04_L02-RearEnd.yaml  Town04_L03-Single.yaml  Town05_L01-SideSwipe.yaml  Town05_L02-RearEnd.yaml  Town05_L03-HeadOn.yaml  Town06_L01-HeadOn.yaml  Town06_L02-SideSwipe.yaml  Town07_L01-RearEnd.yaml  Town07_L02-TBone.yaml  Town07_L03-Single.yaml  Town10HD_L01-driver-pedestrian.yaml  Town10HD_L02-TBone-wrongway.yaml  Town10HD_L03-Single.yaml
generation/carla-simulation/src/client/utils/: error_handling.py
(+26 files in other folders)
